dark mode fixed

--- a/assets/css/city_style.css
+++ b/assets/css/city_style.css
@@ -28,3 +28,11 @@ body{
     width:100%;
     height:100%;
 }
+.placeholder {
+  width: 0.5%;
+  color: #E2E5F1;
+}
+.dark-mode {
+  background-color: black;
+  color: #dddddd;
+}
